# Trivia-Arena

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
clients/java-client/: pom.xml
clients/java-client/src/main/java/com/arenadepreguntas/client/: GrpcClientService.java  MainApp.java  SessionData.java
clients/java-client/src/main/java/com/arenadepreguntas/client/controller/: ArenaController.java  LeaderboardController.java  LobbyController.java
clients/java-client/src/main/resources/com/arenadepreguntas/client/css/: arena_style.css
clients/java-client/src/main/resources/com/arenadepreguntas/client/fxml/: arena.fxml  leaderboard_overlay.fxml  lobby.fxml
clients/python-moderator/: config.py  game_pb2.py  game_pb2_grpc.py  generate_stubs.py  main.py  moderator.py  requirements.txt
clients/python-moderator/grpc_generated/: game_pb2.py  game_pb2_grpc.py  user_pb2.py  user_pb2_grpc.py
clients/python-moderator/networking/: grpc_client.py
clients/python-moderator/repository/: question_repo.py
clients/python-moderator/ui/: main_window.py  sidebar.py  styles.py
clients/python-moderator/ui/views/: live_room_view.py  question_bank_view.py
clients/python-moderator/workers/: db_worker.py  grpc_worker.py
clients/trivia-java-client/: pom.xml
clients/trivia-java-client/src/main/java/com/trivia/: TriviaClientApp.java
clients/trivia-java-client/src/main/proto/: game.proto  user.proto
clients/trivia-java-client/src/test/java/com/trivia/: AppTest.java
proto/: game.proto  user.proto
services/api-gateway/: Cargo.toml  build.rs  dockerfile
services/api-gateway/src/: main.rs
services/auth-service/: Cargo.toml  build.rs  dockerfile
services/auth-service/src/: main.rs
services/game-engine/: Cargo.toml  build.rs  dockerfile
services/game-engine/src/: main.rs
